# airground

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
airground/: __init__.py  environment.py  experts.py  mission.py  models.py  planner.py  platform_params.yaml  scenarios.py
airground/envs/: __init__.py  building_gen.py  police_env.py
docs/: lab-notes.md  reference-platform.md
notebooks/: colab_train.ipynb
scripts/: bc_pretrain.py  demo_breakeven.py  diagnose.py  evaluate.py  rollout.py  train_ppo.py
tests/: test_framework.py
