[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airground"
version = "0.1.0"
description = "Mission-aware flight/drive mode arbitration for hybrid indoor tactical robots"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "gymnasium>=1.0",
]

[project.optional-dependencies]
train = [
    "stable-baselines3>=2.3",
    "torch",
    "tensorboard",
]

[tool.setuptools]
packages = ["airground", "airground.envs"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]  # ternary not always clearer

[tool.setuptools.package-data]
airground = ["platform_params.yaml"]
